- Implementado Factory en Modelos, así como interfaces. - Implementando nuevo ModeloClientesBBDD.